<resources>
    <string name="app_name">ContactsApp</string>
    <string name="call">Call</string>
    <string name="yes" />
    <string name="cancel">Cancel</string>
    <string name="dialog_are_you_sure_you_want_to_delete" />
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="phone">Phone</string>
    <string name="save_changes">Save</string>
    <string name="add">Add</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="enter_phone_here">Enter Phone Here</string>
    <string name="edit">Edit</string>
    <string name="contactpicture">ContactPicture</string>
    <string name="plus_sign">plus_sign</string>
</resources>
